--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "479d3054",
+   "id": "cf66fd5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "853d1c92",
+   "id": "d2cee925",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "be2c9f7d",
+   "id": "f2752524",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dacdee0b",
+   "id": "8cc6efc8",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd7f9fa",
+   "id": "5a98637d",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ca5cae6",
+   "id": "12f6d325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed8698e",
+   "id": "137720e5",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "be505e98",
+   "execution_count": 36,
+   "id": "4708b94e",
    "metadata": {},
    "outputs": [
     {
@@ -284,21 +284,13 @@
      "output_type": "stream",
      "text": [
       "Status: Optimal\n",
-      "Maximum Profit: $176.00\n",
-      "Cutlet_1_Dark_Meat_Produced = 15.0\n",
-      "Cutlet_1_White_Meat_Produced = 35.0\n",
-      "Cutlet_2_Dark_Meat_Produced = 12.0\n",
-      "Cutlet_2_White_Meat_Produced = 18.0\n",
-      "Type_1_Turkey_Bought = 9.0\n",
-      "Type_2_Turkey_Bought = 3.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
-      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+      "Objective - Maximum Profit: $176.00\n",
+      "Cutlet_1_Dark_Meat_Produced = 15.0 lbs\n",
+      "Cutlet_1_White_Meat_Produced = 35.0 lbs\n",
+      "Cutlet_2_Dark_Meat_Produced = 12.0 lbs\n",
+      "Cutlet_2_White_Meat_Produced = 18.0 lbs\n",
+      "Type_1_Turkey_Bought = 9.0 lbs\n",
+      "Type_2_Turkey_Bought = 3.0 lbs\n"
      ]
     }
    ],
@@ -351,15 +343,127 @@
     "\n",
     "# Print the solution\n",
     "print(f\"Status: {LpStatus[status]}\")\n",
-    "print(f\"Maximum Profit: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
+    "print(f\"Objective - Maximum Profit: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
     "for v in sc.variables():\n",
-    "    print(f'{v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros"
+    "    print(f'{v.name} = {v.varValue + 0} lbs') # + 0 ensures no negative zeros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad716da6",
+   "metadata": {},
+   "source": [
+    "### Question 5: \n",
+    "A company wants to plan production for the ensuing year to minimize the combined cost of production \n",
+    "and inventory costs.  In each quarter of the year, demand is anticipated to be 130, 160, 250, and 150 units, \n",
+    "respectively.  The plant can produce a maximum of 200 units each quarter.  The product can be \n",
+    "manufactured at a cost of \\\\$15 per unit during the first quarter, however the manufacturing cost is expected \n",
+    "to rise by \\\\$1 per quarter.  Excess production can be stored from one quarter to the next at a cost of \\\\$1.50 \n",
+    "per unit, but the storage facility can hold a maximum of 60 units.  How should the production be \n",
+    "scheduled so as to minimize the total costs?   \n",
+    " \n",
+    "Part A:  Formulate an LP model to minimize costs. \n",
+    " \n",
+    "Part B:  Solve the LP (provide exact values for all variables and the optimal objective function). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1d6b97b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n",
+      "Objective - Minimize Cost: $11,490.00\n",
+      "****************************************\n",
+      "Units_Produced_in_Q1_For_Same_Quarter_Sale = 130.0\n",
+      "Units_Produced_in_Q1_and_Inventoried_for_Q2 = 10.0\n",
+      "Units_Produced_in_Q2_For_Same_Quarter_Sale = 150.0\n",
+      "Units_Produced_in_Q2_and_Inventoried_for_Q3 = 50.0\n",
+      "Units_Produced_in_Q3_For_Same_Quarter_Sale = 200.0\n",
+      "Units_Produced_in_Q3_and_Inventoried_for_Q4 = 0.0\n",
+      "Units_Produced_in_Q4_For_Same_Quarter_Sale = 150.0\n",
+      "****************************************\n",
+      "Total Units Produced in Q1 = 140.0\n",
+      "Total Units Produced in Q2 = 200.0\n",
+      "Total Units Produced in Q3 = 200.0\n",
+      "Total Units Produced in Q4 = 150.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set up the variables\n",
+    "q1_produced_for_sale_in_quarter = LpVariable(\"Units Produced in Q1 For Same Quarter Sale\", 0, None)\n",
+    "q2_produced_for_sale_in_quarter = LpVariable(\"Units Produced in Q2 For Same Quarter Sale\", 0, None)\n",
+    "q3_produced_for_sale_in_quarter = LpVariable(\"Units Produced in Q3 For Same Quarter Sale\", 0, None)\n",
+    "q4_produced_for_sale_in_quarter = LpVariable(\"Units Produced in Q4 For Same Quarter Sale\", 0, None)\n",
+    "\n",
+    "q1_produced_for_inventory = LpVariable(\"Units Produced in Q1 and Inventoried for Q2\", 0, None)\n",
+    "q2_produced_for_inventory = LpVariable(\"Units Produced in Q2 and Inventoried for Q3\", 0, None)\n",
+    "q3_produced_for_inventory = LpVariable(\"Units Produced in Q3 and Inventoried for Q4\", 0, None)\n",
+    "\n",
+    "# Objective Function Type\n",
+    "sc = LpProblem(\"Anonymous Company Minimize Costs Problem\", LpMinimize)\n",
+    "\n",
+    "# Objective Function\n",
+    "sc += (15*q1_produced_for_sale_in_quarter + 16*q2_produced_for_sale_in_quarter + \n",
+    "       17*q3_produced_for_sale_in_quarter + 18*q4_produced_for_sale_in_quarter + \n",
+    "       (1.50 + 15)*q1_produced_for_inventory + \n",
+    "       (1.50 + 16)*q2_produced_for_inventory + \n",
+    "       (1.50 + 17)*q3_produced_for_inventory, \"Total Costs\")\n",
+    "\n",
+    "# Constraints\n",
+    "#Demand is anticipated to be 130, 160, 250, and 150 units, respectively\n",
+    "sc += (q1_produced_for_sale_in_quarter >= 130, \"Demand is anticipated to be 130 in Q1\")\n",
+    "sc += (q2_produced_for_sale_in_quarter + q1_produced_for_inventory >= 160, \"Demand is anticipated to be 160 in Q2\")\n",
+    "sc += (q3_produced_for_sale_in_quarter + q2_produced_for_inventory >= 250, \"Demand is anticipated to be 250 in Q3\")\n",
+    "sc += (q4_produced_for_sale_in_quarter + q3_produced_for_inventory >= 150, \"Demand is anticipated to be 150 in Q4\")\n",
+    "\n",
+    "#The plant can produce a maximum of 200 units each quarter\n",
+    "sc += (q1_produced_for_sale_in_quarter + q1_produced_for_inventory <= 200, \"The plant can produce a maximum of 200 units in Q1\")\n",
+    "sc += (q2_produced_for_sale_in_quarter + q2_produced_for_inventory<= 200, \"The plant can produce a maximum of 200 units in Q2\")\n",
+    "sc += (q3_produced_for_sale_in_quarter + q3_produced_for_inventory <= 200, \"The plant can produce a maximum of 200 units in Q3\")\n",
+    "sc += (q4_produced_for_sale_in_quarter <= 200, \"The plant can produce a maximum of 200 units in Q4\")\n",
+    "\n",
+    "#the storage facility can hold a maximum of 60 units.\n",
+    "sc += (q1_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q2\")\n",
+    "sc += (q2_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q3\")\n",
+    "sc += (q3_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q4\")\n",
+    "\n",
+    "## Greater than 0 constraints\n",
+    "sc += (q1_produced_for_sale_in_quarter >= 0, \"Q1 Production For Sale Non-negative Constraint\")\n",
+    "sc += (q2_produced_for_sale_in_quarter >= 0, \"Q2 Production For Sale Non-negative Constraint\")\n",
+    "sc += (q3_produced_for_sale_in_quarter >= 0, \"Q3 Production For Sale Non-negative Constraint\")\n",
+    "sc += (q4_produced_for_sale_in_quarter >= 0, \"Q4 Production For Sale Non-negative Constraint\")\n",
+    "sc += (q1_produced_for_inventory >= 0, \"Inventory For Q2 Non-negative Constraint\")\n",
+    "sc += (q2_produced_for_inventory >= 0, \"Inventory For Q3 Non-negative Constraint\")\n",
+    "sc += (q3_produced_for_inventory >= 0, \"Inventory For Q4 Non-negative Constraint\")\n",
+    "\n",
+    "# Solve the problem\n",
+    "status = sc.solve(PULP_CBC_CMD(msg=0))\n",
+    "\n",
+    "# Print the solution\n",
+    "print(f\"Status: {LpStatus[status]}\")\n",
+    "print(f\"Objective - Minimize Cost: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
+    "print(\"*\"*40)\n",
+    "for v in sc.variables():\n",
+    "    print(f'{v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros\n",
+    "\n",
+    "print(\"*\"*40)\n",
+    "print(f'Total Units Produced in Q1 = {q1_produced_for_sale_in_quarter.varValue + q1_produced_for_inventory.varValue}')\n",
+    "print(f'Total Units Produced in Q2 = {q2_produced_for_sale_in_quarter.varValue + q2_produced_for_inventory.varValue}')\n",
+    "print(f'Total Units Produced in Q3 = {q3_produced_for_sale_in_quarter.varValue + q3_produced_for_inventory.varValue}')\n",
+    "print(f'Total Units Produced in Q4 = {q4_produced_for_sale_in_quarter.varValue}')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33e26adf",
+   "id": "ab435839",
    "metadata": {},
    "outputs": [],
    "source": []
