adding loop for non-negativity constraints

--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf66fd5f",
+   "id": "1e5ad0e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2cee925",
+   "id": "64c6cdb0",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f2752524",
+   "id": "201415f0",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cc6efc8",
+   "id": "64f9bfda",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a98637d",
+   "id": "99eefada",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12f6d325",
+   "id": "6e87bf6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137720e5",
+   "id": "905857b8",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4708b94e",
+   "id": "0b952ba6",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad716da6",
+   "id": "ab82a5f3",
    "metadata": {},
    "source": [
     "### Question 5: \n",
@@ -369,8 +369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "1d6b97b8",
+   "execution_count": 57,
+   "id": "03ee1eed",
    "metadata": {},
    "outputs": [
     {
@@ -405,6 +405,7 @@
     "q1_produced_for_inventory = LpVariable(\"Units Produced in Q1 and Inventoried for Q2\", 0, None)\n",
     "q2_produced_for_inventory = LpVariable(\"Units Produced in Q2 and Inventoried for Q3\", 0, None)\n",
     "q3_produced_for_inventory = LpVariable(\"Units Produced in Q3 and Inventoried for Q4\", 0, None)\n",
+    "## Assumes Q1 of the following year won't need units from inventory (we don't have demand at this time)\n",
     "\n",
     "# Objective Function Type\n",
     "sc = LpProblem(\"Anonymous Company Minimize Costs Problem\", LpMinimize)\n",
@@ -429,19 +430,14 @@
     "sc += (q3_produced_for_sale_in_quarter + q3_produced_for_inventory <= 200, \"The plant can produce a maximum of 200 units in Q3\")\n",
     "sc += (q4_produced_for_sale_in_quarter <= 200, \"The plant can produce a maximum of 200 units in Q4\")\n",
     "\n",
-    "#the storage facility can hold a maximum of 60 units.\n",
+    "#The storage facility can hold a maximum of 60 units.\n",
     "sc += (q1_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q2\")\n",
     "sc += (q2_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q3\")\n",
     "sc += (q3_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q4\")\n",
     "\n",
     "## Greater than 0 constraints\n",
-    "sc += (q1_produced_for_sale_in_quarter >= 0, \"Q1 Production For Sale Non-negative Constraint\")\n",
-    "sc += (q2_produced_for_sale_in_quarter >= 0, \"Q2 Production For Sale Non-negative Constraint\")\n",
-    "sc += (q3_produced_for_sale_in_quarter >= 0, \"Q3 Production For Sale Non-negative Constraint\")\n",
-    "sc += (q4_produced_for_sale_in_quarter >= 0, \"Q4 Production For Sale Non-negative Constraint\")\n",
-    "sc += (q1_produced_for_inventory >= 0, \"Inventory For Q2 Non-negative Constraint\")\n",
-    "sc += (q2_produced_for_inventory >= 0, \"Inventory For Q3 Non-negative Constraint\")\n",
-    "sc += (q3_produced_for_inventory >= 0, \"Inventory For Q4 Non-negative Constraint\")\n",
+    "for v in sc.variables():\n",
+    "    sc += (v >= 0, f\"{v.name} Non-negative Constraint\")\n",
     "\n",
     "# Solve the problem\n",
     "status = sc.solve(PULP_CBC_CMD(msg=0))\n",
@@ -463,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab435839",
+   "id": "1a262599",
    "metadata": {},
    "outputs": [],
    "source": []
