working on problem 2

--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1e5ad0e5",
+   "id": "254aa202",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64c6cdb0",
+   "id": "9de203ae",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "201415f0",
+   "id": "7d4122ee",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f9bfda",
+   "id": "79cfaa42",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99eefada",
+   "id": "f345ad81",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -188,75 +188,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e87bf6b",
+   "execution_count": 70,
+   "id": "e346c70d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n",
+      "Maximum Cash on Hand in Month 5: $627.39\n",
+      "Cash_to_Invest_Month_1_for_four_months = $200.60\n",
+      "Cash_to_Invest_Month_1_for_one_month = $599.40\n",
+      "Cash_to_Invest_Month_1_for_three_months = $0.00\n",
+      "Cash_to_Invest_Month_1_for_two_months = $0.00\n",
+      "Cash_to_Invest_Month_2_for_four_months = $0.00\n",
+      "Cash_to_Invest_Month_2_for_one_month = $495.05\n",
+      "Cash_to_Invest_Month_2_for_three_months = $107.23\n",
+      "Cash_to_Invest_Month_2_for_two_months = $197.72\n",
+      "Cash_to_Invest_Month_3_for_four_months = $0.00\n",
+      "Cash_to_Invest_Month_3_for_one_month = $300.00\n",
+      "Cash_to_Invest_Month_3_for_three_months = $0.00\n",
+      "Cash_to_Invest_Month_3_for_two_months = $0.00\n",
+      "Cash_to_Invest_Month_4_for_four_months = $0.00\n",
+      "Cash_to_Invest_Month_4_for_one_month = $300.00\n",
+      "Cash_to_Invest_Month_4_for_three_months = $0.00\n",
+      "Cash_to_Invest_Month_4_for_two_months = $0.00\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up the variables\n",
-    "month_1_point_1 = LpVariable(\"Cash to Invest Month 1 at 0.1% for one month\", 0, None)\n",
-    "month_1_point_5 = LpVariable(\"Cash to Invest Month 1 at 0.5% for two months\", 0, None)\n",
-    "month_1_1 = LpVariable(\"Cash to Invest Month 1 at 1% for three months\", 0, None)\n",
-    "month_1_2 = LpVariable(\"Cash to Invest Month 1 at 2% for four months\", 0, None)\n",
+    "month_1_for_one_month = LpVariable(\"Cash to Invest Month 1 for one month\", 0, None)\n",
+    "month_1_for_two_month = LpVariable(\"Cash to Invest Month 1 for two months\", 0, None)\n",
+    "month_1_for_three_month = LpVariable(\"Cash to Invest Month 1 for three months\", 0, None)\n",
+    "month_1_for_four_month = LpVariable(\"Cash to Invest Month 1 for four months\", 0, None)\n",
     "\n",
-    "month_2_point_1 = LpVariable(\"Cash to Invest Month 2 at 0.1% for one month\", 0, None)\n",
-    "month_2_point_5 = LpVariable(\"Cash to Invest Month 2 at 0.5% for two months\", 0, None)\n",
-    "month_2_1 = LpVariable(\"Cash to Invest Month 2 at 1% for three months\", 0, None)\n",
-    "month_2_2 = LpVariable(\"Cash to Invest Month 2 at 2% for four months\", 0, None)\n",
+    "month_2_for_one_month = LpVariable(\"Cash to Invest Month 2 for one month\", 0, None)\n",
+    "month_2_for_two_month = LpVariable(\"Cash to Invest Month 2 for two months\", 0, None)\n",
+    "month_2_for_three_month = LpVariable(\"Cash to Invest Month 2 for three months\", 0, None)\n",
     "\n",
-    "month_3_point_1 = LpVariable(\"Cash to Invest Month 3 at 0.1% for one month\", 0, None)\n",
-    "month_3_point_5 = LpVariable(\"Cash to Invest Month 3 at 0.5% for two months\", 0, None)\n",
-    "month_3_1 = LpVariable(\"Cash to Invest Month 3 at 1% for three months\", 0, None)\n",
-    "month_3_2 = LpVariable(\"Cash to Invest Month 3 at 2% for four months\", 0, None)\n",
+    "month_3_for_one_month = LpVariable(\"Cash to Invest Month 3 for one month\", 0, None)\n",
+    "month_3_for_two_month = LpVariable(\"Cash to Invest Month 3 for two months\", 0, None)\n",
     "\n",
-    "month_4_point_1 = LpVariable(\"Cash to Invest Month 4 at 0.1% for one month\", 0, None)\n",
-    "month_4_point_5 = LpVariable(\"Cash to Invest Month 4 at 0.5% for two months\", 0, None)\n",
-    "month_4_1 = LpVariable(\"Cash to Invest Month 4 at 1% for three months\", 0, None)\n",
-    "month_4_2 = LpVariable(\"Cash to Invest Month 4 at 2% for four months\", 0, None)\n",
+    "month_4_for_one_month = LpVariable(\"Cash to Invest Month 4 for one month\", 0, None)\n",
     "\n",
     "# Objective Function Type\n",
-    "sc = LpProblem(\"Finco Investing Problem\", LpMaximize)\n",
+    "fc = LpProblem(\"Finco Investing Problem\", LpMaximize)\n",
     "\n",
     "# Objective Function\n",
-    "sc += (month_1_point_1 + month_1_point_5 + month_1_1 + month_1_2 +\n",
-    "       month_2_point_1 + month_2_point_5 + month_2_1 + month_2_2 +\n",
-    "       month_3_point_1 + month_3_point_5 + month_3_1 + month_3_2 + \n",
-    "       month_4_point_1 + month_4_point_5 + month_4_1 + month_4_2, \"Total Cash on Hand in Month 5\")\n",
+    "fc += ((1.08*month_1_for_four_month) + (1.03*month_2_for_three_month) + \n",
+    "       (1.01*month_3_for_two_month) + (1.001*month_4_for_one_month), \"Total Cash on Hand Beginning of Month 5\")\n",
     "\n",
     "# Constraints\n",
-    "# Money left to invest\n",
-    "sc += (1.1*month_1_point_1 + month_1_point_5 + month_1_1 + month_1_2 <= 600-400, \n",
-    "         \"Month 1 leaves 200 left to invest\")\n",
-    "sc += (1.1*month_2_point_1 + month_2_point_5 + month_2_1 + month_2_2 <= 800-500, \n",
-    "         \"Month 2 leaves 300 left to invest\")\n",
-    "sc += (1.1*month_3_point_1 + month_3_point_5 + month_3_1 + month_3_2 <= 300-500, \n",
-    "         \"Month 3 leaves -200 left to invest\")\n",
-    "sc += (1.1*month_4_point_1 + month_4_point_5 + month_4_1 + month_4_2 <= 300-250, \n",
-    "         \"Month 4 leaves 50 left to invest\")\n",
+    "# Revenue to Invest\n",
+    "fc += (month_1_for_one_month + month_1_for_two_month + month_1_for_three_month + \n",
+    "       month_1_for_four_month <= 800, \"Beginning of Month 1 has 400 Dollars from Revenue to Invest and 400 Cash\")\n",
     "\n",
+    "fc += (month_2_for_one_month + month_2_for_two_month + month_2_for_three_month + \n",
+    "       month_2_for_four_month <= 800, \"Beginning of Month 2 has 800 Dollars to Invest\")\n",
+    "\n",
+    "fc += (month_3_for_one_month + month_3_for_two_month + month_3_for_three_month + \n",
+    "       month_3_for_four_month <= 300, \"Beginning of Month 3 has 300 Dollars to Invest\")\n",
+    "\n",
+    "fc += (month_4_for_one_month + month_4_for_two_month + month_4_for_three_month + \n",
+    "       month_4_for_four_month <= 300, \"Beginning of Month 4 has 300 Dollars to Invest\")\n",
+    "\n",
+    "\n",
+    "# Bills to Pay\n",
+    "fc += ((1.001*month_1_for_one_month) >= 600, \n",
+    "       \"End of Month 1 has a 600 Dollar Bill\")\n",
+    "\n",
+    "fc += ((1.001*month_1_for_two_month) + (1.01*month_2_for_one_month) >= 500, \n",
+    "       \"End of Month 2 has a 500 Dollar Bill\")\n",
+    "\n",
+    "fc += ((1.03*month_1_for_three_month) + (1.01*month_2_for_two_month) + \n",
+    "       (1.001*month_3_for_one_month)  >= 500, \n",
+    "       \"End of Month 3 has a 500 Dollar Bill\")\n",
+    "\n",
+    "fc += ((1.08*month_1_for_four_month) + (1.03*month_2_for_three_month) + \n",
+    "       (1.01*month_3_for_two_month) + (1.001*month_4_for_one_month) >= 250, \n",
+    "       \"End of Month 4 has a 250 Dollar Bill\")\n",
     "\n",
     "\n",
     "## Greater than 0 constraints\n",
-    "sc += (steel_1_mill_1 >= 0, \"Steel 1 Mill 1 Non-negative Constraint\")\n",
-    "sc += (steel_2_mill_1 >= 0, \"Steel 2 Mill 1 Non-negative Constraint\")\n",
-    "sc += (steel_3_mill_1 >= 0, \"Steel 3 Mill 1 Non-negative Constraint\")\n",
-    "sc += (steel_1_mill_2 >= 0, \"Steel 1 Mill 2 Non-negative Constraint\")\n",
-    "sc += (steel_2_mill_2 >= 0, \"Steel 2 Mill 2 Non-negative Constraint\")\n",
-    "sc += (steel_3_mill_2 >= 0, \"Steel 3 Mill 2 Non-negative Constraint\")\n",
+    "for v in fc.variables():\n",
+    "    fc += (v >= 0, f\"{v.name} Non-negative Constraint\")\n",
     "\n",
     "# Solve the problem\n",
-    "status = sc.solve(PULP_CBC_CMD(msg=0))\n",
+    "status = fc.solve(PULP_CBC_CMD(msg=0))\n",
     "\n",
     "# Print the solution\n",
     "print(f\"Status: {LpStatus[status]}\")\n",
-    "print(f\"Minimum cost: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
-    "for v in sc.variables():\n",
-    "    print(f'{v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros"
+    "print(f\"Maximum Cash on Hand in Month 5: {'${:,.2f}'.format(value(fc.objective))}\") \n",
+    "for v in fc.variables():\n",
+    "    print(f\"{v.name} = {'${:,.2f}'.format(value(v.varValue + 0))}\") # + 0 ensures no negative zeros"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "905857b8",
+   "id": "ecbfb87a",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -275,8 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "0b952ba6",
+   "execution_count": 60,
+   "id": "e2d3ba19",
    "metadata": {},
    "outputs": [
     {
@@ -305,52 +336,53 @@
     "type_2_turkey = LpVariable(\"Type_2_Turkey_Bought\", 0, None, cat=\"Integer\")\n",
     "\n",
     "# Objective Function Type\n",
-    "sc = LpProblem(\"Turkeyco Profit Problem\", LpMaximize)\n",
+    "tc = LpProblem(\"Turkeyco Profit Problem\", LpMaximize)\n",
     "\n",
     "# Objective Function\n",
-    "sc += ((4*(cutlet_1_white + cutlet_1_dark) + 3*(cutlet_2_white + cutlet_2_dark)) - \n",
+    "tc += ((4*(cutlet_1_white + cutlet_1_dark) + 3*(cutlet_2_white + cutlet_2_dark)) - \n",
     "       (10*type_1_turkey + 8*type_2_turkey), \"Total Profit\")\n",
     "\n",
     "# Constraints\n",
     "#White meat percentage\n",
-    "sc += (cutlet_1_white >= .7*(cutlet_1_white + cutlet_1_dark),\n",
+    "tc += (cutlet_1_white >= .7*(cutlet_1_white + cutlet_1_dark),\n",
     "         \"Cutlet 1 must consist of at least 70% white meat\")\n",
-    "sc += (cutlet_2_white >= .6*(cutlet_2_white + cutlet_2_dark),\n",
+    "tc += (cutlet_2_white >= .6*(cutlet_2_white + cutlet_2_dark),\n",
     "         \"Cutlet 2 must consist of at least 60% white meat\")\n",
     "\n",
     "#Turkey Meat Types\n",
-    "sc += (5*type_1_turkey + 3*type_2_turkey >= cutlet_1_white + cutlet_2_white,\n",
+    "tc += (5*type_1_turkey + 3*type_2_turkey >= cutlet_1_white + cutlet_2_white,\n",
     "         \"Turkey 1 yields 5 lb of white meat and 2 yields 3 lb of white meat\")\n",
-    "sc += (2*type_1_turkey + 3*type_2_turkey >= cutlet_1_dark + cutlet_2_dark,\n",
+    "tc += (2*type_1_turkey + 3*type_2_turkey >= cutlet_1_dark + cutlet_2_dark,\n",
     "         \"Turkey 1 yields 2 lb of dark meat and 2 yields 3 lb of dark meat\")\n",
     "\n",
     "#At most, 50 lb of cutlet 1 and 30 lb of cutlet 2 can be sold\n",
-    "sc += (cutlet_1_white + cutlet_1_dark <= 50,\n",
+    "tc += (cutlet_1_white + cutlet_1_dark <= 50,\n",
     "         \"50 lb of cutlet 1 can be sold\")\n",
-    "sc += (cutlet_2_white + cutlet_2_dark <= 30,\n",
+    "tc += (cutlet_2_white + cutlet_2_dark <= 30,\n",
     "         \"30 lb of cutlet 2 can be sold\")\n",
     "\n",
     "## Greater than 0 constraints\n",
-    "sc += (cutlet_1_white >= 0, \"Cutlet 1 White Non-negative Constraint\")\n",
-    "sc += (cutlet_1_dark >= 0, \"Cutlet 1 Dark Non-negative Constraint\")\n",
-    "sc += (cutlet_2_white >= 0, \"Cutlet 2 White Non-negative Constraint\")\n",
-    "sc += (cutlet_2_dark >= 0, \"Cutlet 2 Dark Non-negative Constraint\")\n",
-    "sc += (type_1_turkey >= 0, \"Turkey 1 Non-negative Constraint\")\n",
-    "sc += (type_2_turkey >= 0, \"Turkey 2 Non-negative Constraint\")\n",
+    "tc += (cutlet_1_white >= 0, \"Cutlet 1 White Non-negative Constraint\")\n",
+    "tc += (cutlet_1_dark >= 0, \"Cutlet 1 Dark Non-negative Constraint\")\n",
+    "tc += (cutlet_2_white >= 0, \"Cutlet 2 White Non-negative Constraint\")\n",
+    "tc += (cutlet_2_dark >= 0, \"Cutlet 2 Dark Non-negative Constraint\")\n",
+    "tc += (type_1_turkey >= 0, \"Turkey 1 Non-negative Constraint\")\n",
+    "tc += (type_2_turkey >= 0, \"Turkey 2 Non-negative Constraint\")\n",
     "\n",
     "# Solve the problem\n",
-    "status = sc.solve(PULP_CBC_CMD(msg=0))\n",
+    "status = tc.solve(PULP_CBC_CMD(msg=0))\n",
     "\n",
     "# Print the solution\n",
     "print(f\"Status: {LpStatus[status]}\")\n",
-    "print(f\"Objective - Maximum Profit: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
-    "for v in sc.variables():\n",
-    "    print(f'{v.name} = {v.varValue + 0} lbs') # + 0 ensures no negative zeros"
+    "print(f\"Objective - Maximum Profit: {'${:,.2f}'.format(value(tc.objective))}\")  ## formats automatically with commas at thou\n",
+    "for v in tc.variables():\n",
+    "    print(f'{v.name} = {v.varValue + 0} lbs') # + 0 ensures no negative zeros\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ab82a5f3",
+   "id": "fb870131",
    "metadata": {},
    "source": [
     "### Question 5: \n",
@@ -370,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "03ee1eed",
+   "id": "6fdc7ac4",
    "metadata": {},
    "outputs": [
     {
@@ -408,10 +440,10 @@
     "## Assumes Q1 of the following year won't need units from inventory (we don't have demand at this time)\n",
     "\n",
     "# Objective Function Type\n",
-    "sc = LpProblem(\"Anonymous Company Minimize Costs Problem\", LpMinimize)\n",
+    "ac = LpProblem(\"Anonymous Company Minimize Costs Problem\", LpMinimize)\n",
     "\n",
     "# Objective Function\n",
-    "sc += (15*q1_produced_for_sale_in_quarter + 16*q2_produced_for_sale_in_quarter + \n",
+    "ac += (15*q1_produced_for_sale_in_quarter + 16*q2_produced_for_sale_in_quarter + \n",
     "       17*q3_produced_for_sale_in_quarter + 18*q4_produced_for_sale_in_quarter + \n",
     "       (1.50 + 15)*q1_produced_for_inventory + \n",
     "       (1.50 + 16)*q2_produced_for_inventory + \n",
@@ -419,34 +451,34 @@
     "\n",
     "# Constraints\n",
     "#Demand is anticipated to be 130, 160, 250, and 150 units, respectively\n",
-    "sc += (q1_produced_for_sale_in_quarter >= 130, \"Demand is anticipated to be 130 in Q1\")\n",
-    "sc += (q2_produced_for_sale_in_quarter + q1_produced_for_inventory >= 160, \"Demand is anticipated to be 160 in Q2\")\n",
-    "sc += (q3_produced_for_sale_in_quarter + q2_produced_for_inventory >= 250, \"Demand is anticipated to be 250 in Q3\")\n",
-    "sc += (q4_produced_for_sale_in_quarter + q3_produced_for_inventory >= 150, \"Demand is anticipated to be 150 in Q4\")\n",
+    "ac += (q1_produced_for_sale_in_quarter >= 130, \"Demand is anticipated to be 130 in Q1\")\n",
+    "ac += (q2_produced_for_sale_in_quarter + q1_produced_for_inventory >= 160, \"Demand is anticipated to be 160 in Q2\")\n",
+    "ac += (q3_produced_for_sale_in_quarter + q2_produced_for_inventory >= 250, \"Demand is anticipated to be 250 in Q3\")\n",
+    "ac += (q4_produced_for_sale_in_quarter + q3_produced_for_inventory >= 150, \"Demand is anticipated to be 150 in Q4\")\n",
     "\n",
     "#The plant can produce a maximum of 200 units each quarter\n",
-    "sc += (q1_produced_for_sale_in_quarter + q1_produced_for_inventory <= 200, \"The plant can produce a maximum of 200 units in Q1\")\n",
-    "sc += (q2_produced_for_sale_in_quarter + q2_produced_for_inventory<= 200, \"The plant can produce a maximum of 200 units in Q2\")\n",
-    "sc += (q3_produced_for_sale_in_quarter + q3_produced_for_inventory <= 200, \"The plant can produce a maximum of 200 units in Q3\")\n",
-    "sc += (q4_produced_for_sale_in_quarter <= 200, \"The plant can produce a maximum of 200 units in Q4\")\n",
+    "ac += (q1_produced_for_sale_in_quarter + q1_produced_for_inventory <= 200, \"The plant can produce a maximum of 200 units in Q1\")\n",
+    "ac += (q2_produced_for_sale_in_quarter + q2_produced_for_inventory<= 200, \"The plant can produce a maximum of 200 units in Q2\")\n",
+    "ac += (q3_produced_for_sale_in_quarter + q3_produced_for_inventory <= 200, \"The plant can produce a maximum of 200 units in Q3\")\n",
+    "ac += (q4_produced_for_sale_in_quarter <= 200, \"The plant can produce a maximum of 200 units in Q4\")\n",
     "\n",
     "#The storage facility can hold a maximum of 60 units.\n",
-    "sc += (q1_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q2\")\n",
-    "sc += (q2_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q3\")\n",
-    "sc += (q3_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q4\")\n",
+    "ac += (q1_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q2\")\n",
+    "ac += (q2_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q3\")\n",
+    "ac += (q3_produced_for_inventory <= 60, \"The storage facility can hold a maximum of 60 units for Q4\")\n",
     "\n",
     "## Greater than 0 constraints\n",
-    "for v in sc.variables():\n",
-    "    sc += (v >= 0, f\"{v.name} Non-negative Constraint\")\n",
+    "for v in ac.variables():\n",
+    "    ac += (v >= 0, f\"{v.name} Non-negative Constraint\")\n",
     "\n",
     "# Solve the problem\n",
-    "status = sc.solve(PULP_CBC_CMD(msg=0))\n",
+    "status = ac.solve(PULP_CBC_CMD(msg=0))\n",
     "\n",
     "# Print the solution\n",
     "print(f\"Status: {LpStatus[status]}\")\n",
-    "print(f\"Objective - Minimize Cost: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
+    "print(f\"Objective - Minimize Cost: {'${:,.2f}'.format(value(ac.objective))}\")  ## formats automatically with commas at thou\n",
     "print(\"*\"*40)\n",
-    "for v in sc.variables():\n",
+    "for v in ac.variables():\n",
     "    print(f'{v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros\n",
     "\n",
     "print(\"*\"*40)\n",
@@ -459,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a262599",
+   "id": "388e7ef5",
    "metadata": {},
    "outputs": [],
    "source": []
